# giga-sam

./: .gitattributes  .gitignore  README.md  cocoapi.ipynb  init.sh  pyproject.toml
checkpoints/: MicroSAM.pt  MicroSAM_96x96_epoch1.pt  MicroSAM_96x96_epoch15.pt  MicroSAM_96x96_epoch7.pt
configs/annotations/: filtered_anns_64_64.json  filtered_anns_64x64_val2017_coco.json  filtered_anns_64x64_val2017_lvis.json  filtered_anns_96_96.json  filtered_anns_96x96_val2017_coco.json  filtered_anns_96x96_val2017_lvis.json
dataset/: .gitignore  download_dataset.sh
max78000/: max78000_debug.ipynb  max78000_train.ipynb  minimalsam_dataset.py  minimalsam_net.py  train_minimalsam.sh
max78000/deployment/: minimalsam_dataset.py  minimalsam_dataset_88.py  minimalsam_net.py  minimalsam_net.yaml  minimalsam_net_88.yaml  minimalsam_synth.sh  qat_policy_minimalsam.yaml  schedule_minimalsam.yaml
max78000/inspiration/: train_aisegment_unet.sh
max78000/testing/: dataset_test_aisegment.ipynb  dataset_test_minimalsam.ipynb  max78000_validate.ipynb  max78000_validate_88x88.ipynb
notebooks/: cocoapi.ipynb  giga-sam.ipynb  minimal-sam.ipynb  training.ipynb
src/minimal_sam/: __init__.py
src/minimal_sam/models/: __init__.py  micro_sam.py  micro_sam_teacher.py  minimal_sam.py  pico_sam.py
src/minimal_sam/utils/: __init__.py  data.py  helper.py  loss.py  metrics.py
